--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
+
+    "target":"es6",
+    
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
